--- a/homework_submissions/hw3_pt1_numpy_exercises.ipynb
+++ b/homework_submissions/hw3_pt1_numpy_exercises.ipynb
@@ -21,11 +21,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "27"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here"
+    "# Your code here\n",
+    "len(x)"
    ]
   },
   {
@@ -37,11 +49,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "[ 0  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16 17 18 19 20 21 22 23\n",
+      " 24 25 26]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "first = x[0]\n",
+    "print(first)\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Your code here\n",
+    "first = x[0]\n",
+    "print(first)"
    ]
   },
   {
@@ -53,11 +96,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "26\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "# Your code here\n",
+    "last = x[-1]\n",
+    "print(last)"
    ]
   },
   {
@@ -69,11 +122,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 1 2 3 4]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "# Your code here\n",
+    "first_five = x[:5]\n",
+    "print(first_five)"
    ]
   },
   {
@@ -85,11 +148,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[22 23 24 25 26]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "# Your code here\n",
+    "last_five = x[-5:]\n",
+    "print(last_five)"
    ]
   },
   {
@@ -101,11 +174,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0  2  4  6  8 10 12 14 16 18 20 22 24 26]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "# Your code here\n",
+    "every_other = x[::2]\n",
+    "print(every_other)"
    ]
   },
   {
@@ -118,11 +201,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 1 2 3 4 5 6 7 8]\n",
+      "[[0 1 2]\n",
+      " [3 4 5]\n",
+      " [6 7 8]]\n"
+     ]
+    }
+   ],
    "source": [
-    "y = None # Your code here"
+    " # Your code here\n",
+    "first_nine = x[:9]\n",
+    "print(first_nine)\n",
+    "y = first_nine.reshape(3,3)\n",
+    "print(y)"
    ]
   },
   {
@@ -134,16 +232,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4.0\n"
+     ]
+    }
+   ],
    "source": [
     "y = np.array([\n",
     "    [0, 1, 2],\n",
     "    [3, 4, 5],\n",
     "    [6, 7, 8],\n",
     "])\n",
-    "# Your code here"
+    "# Your code here\n",
+    "middle = np.median(y)\n",
+    "print(middle)"
    ]
   },
   {
@@ -155,11 +263,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 1 2]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "# Your code here\n",
+    "top_row = y[0]\n",
+    "print(top_row)"
    ]
   },
   {
@@ -171,11 +289,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 3 6]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "# Your code here\n",
+    "first_col = y[:,0]\n",
+    "print(first_col)"
    ]
   },
   {
@@ -187,12 +315,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16 17 18 19 20 21 22 23\n",
+      " 24 25 26]\n",
+      "[[[ 0  1  2]\n",
+      "  [ 3  4  5]\n",
+      "  [ 6  7  8]]\n",
+      "\n",
+      " [[ 9 10 11]\n",
+      "  [12 13 14]\n",
+      "  [15 16 17]]\n",
+      "\n",
+      " [[18 19 20]\n",
+      "  [21 22 23]\n",
+      "  [24 25 26]]]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(3, 3, 3)"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "x = np.arange(0, 3**3)\n",
-    "z = None # Your code here"
+    "# Your code here\n",
+    "print(x)\n",
+    "z = x.reshape(3,3,3) \n",
+    "print(z)\n",
+    "z.shape"
    ]
   },
   {
@@ -204,9 +366,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "13.0\n"
+     ]
+    }
+   ],
    "source": [
     "z = np.array([\n",
     "    [[ 0, 1, 2],\n",
@@ -219,7 +389,9 @@
     "     [21,22,23],\n",
     "     [24,25,26]]\n",
     "])\n",
-    "# Your code here"
+    "# Your code here\n",
+    "mid_z = np.median(z)\n",
+    "print(mid_z)\n"
    ]
   },
   {
@@ -232,11 +404,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "351\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "# Your code here\n",
+    "sum_z = np.sum(z)\n",
+    "print(sum_z)"
    ]
   },
   {
@@ -249,11 +431,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[27 30 33]\n",
+      " [36 39 42]\n",
+      " [45 48 51]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "# Your code here\n",
+    "sum_z_firdim = np.sum(z,axis = 0)\n",
+    "print(sum_z_firdim)"
    ]
   },
   {
@@ -265,17 +459,37 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 3 12 21]\n",
+      " [30 39 48]\n",
+      " [57 66 75]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Your code here\n",
+    "# Your code here\n",
+    "sum_z_lastdim = np.sum(z,axis = -1)\n",
+    "print(sum_z_lastdim)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Your code here"
-   ]
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "has-tools",
    "language": "python",
    "name": "python3"
   },
@@ -289,7 +503,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
